--- a/themes/hugo-creative-theme/layouts/partials/head.html
+++ b/themes/hugo-creative-theme/layouts/partials/head.html
@@ -11,12 +11,8 @@
 {{ "<!-- Bootstrap Core CSS -->" | safeHTML }}
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/bootstrap.min.css" type="text/css">
 {{ "<!-- Custom Fonts -->" | safeHTML }}
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-<link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:500" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-{{ "<!-- Plugin CSS -->" | safeHTML }}
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/animate.min.css" type="text/css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400i,600i,700i,800i,400,300,600,700,800|Merriweather:400,300,300i,400i,700,700i,900,900i|Source+Code+Pro:500">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {{ "<!-- Custom CSS -->" | safeHTML }}
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/creative.css" type="text/css">
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/modals.css" type="text/css">
