--- a/themes/hugo-creative-theme/layouts/workshop/single.html
+++ b/themes/hugo-creative-theme/layouts/workshop/single.html
@@ -16,8 +16,8 @@
         <div class="timeline">
           <div class="timeline-block clearfix">
             <div class="timeline-point"></div>
-            <div class="timeline-time col-xs-3 col-md-2">{{ .Site.Params.workshop.timerange }}</div>
-            <div class="timeline-event col-xs-9 col-md-10">
+            <div class="timeline-time col-xs-3">{{ .Site.Params.workshop.timerange }}</div>
+            <div class="timeline-event col-xs-8 col-xs-offset-1">
               <h2 class="timeline-header">{{ .Site.Params.workshop.title }}</h2>
               <div>
                   {{ .Content }}
@@ -67,4 +67,3 @@
 {{ partial "credits.html" . }}
 
 {{ partial "js.html" . }}
-
