add link to venue

--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -6,8 +6,8 @@
             <div class="cover-img">
               <img class="img-responsive" src="../../img/gopherconsg.svg" alt="GopherCon Singapore" width="450" height="450">
             </div>
-            <h2 class="cover-subtitle">25 - 26 May 2017</h2>
-            <h3 class="cover-venue">Google Asia Pacific HQ, Singapore</h3>
+            <h2 class="cover-subtitle">25 - 26 May 2017 <br><a
+             href="/venue">Google Asia Pacific HQ, Singapore</a></h2>
             {{ if and .Site.Params.hero.slogan .Site.Params.hero.subtitle }}
                 <hr>
             {{ end }}
