add a sold out banner

--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -11,10 +11,8 @@
             {{ if and .Site.Params.hero.slogan .Site.Params.hero.subtitle }}
                 <hr>
             {{ end }}
-            <div class="btns-list">
-            {{ with .Site.Params.hero.buttonText }}
-            <a href="http://www.ticketbase.com/events/gopherconsg2017" class="btn btn-primary btn-xl register-btn">{{ . }}</a>
-            {{ end }}
+            <div class="banner">
+             <span class="content">Thank you! We are SOLD OUT! 👏</span>
             </div>
         </div>
     </div>
