--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -12,7 +12,7 @@
                 <hr>
             {{ end }}
             <div class="banner">
-             <span class="content">Thank you! We are SOLD OUT! 👏</span>
+             <span class="content">Thank you! Tickets are SOLD OUT! 👏</span>
             </div>
         </div>
     </div>
