--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -639,6 +639,14 @@ span.content {
   padding: 0;
 }
 
+@media(max-width: 700px) {
+  .banner {
+    margin: 0.5em 1em;
+    padding: 0.8em 1em;
+    font-size: 1.3em;
+  }
+}
+
 header {
     position: relative;
     width: 100%;
