Fix grammatical error
https://forum.wordreference.com/threads/is-subjected-to-change-or-to-changing.1726138/

https://answers.yahoo.com/question/index?qid=20090330194826AAgfLFw

--- a/themes/hugo-creative-theme/layouts/talks/single.html
+++ b/themes/hugo-creative-theme/layouts/talks/single.html
@@ -12,7 +12,7 @@
         {{ end }}
         <hr>
         <div class="schedule-event">{{ .Site.Params.conference.type }}</div>
-        <div class="schedule-notes">*Schedule is subjected to change*</div>
+        <div class="schedule-notes">*Schedule is subject to change*</div>
       </div>
       <div class="article-body" itemprop="articleBody">
         <div class="timeline">
