Made workshop venue info conditional and commented

--- a/themes/hugo-creative-theme/layouts/workshop/single.html
+++ b/themes/hugo-creative-theme/layouts/workshop/single.html
@@ -27,7 +27,7 @@
                 <div class="location-block">
                   <div class="location-svg-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384.05 512"><title>location-icon</title><path d="M446.81,494l-67.5-142.78a12.64,12.64,0,0,0-6.48-6.22L339.25,330l58.18-97.52q.21-.35.4-.71a159.36,159.36,0,0,0-30-185.92A159.29,159.29,0,0,0,114.17,231.78q.19.36.39.71L172.74,330,139,345a12.63,12.63,0,0,0-6.29,6.14L65.19,494a12.63,12.63,0,0,0,16.56,16.94l84.56-37.65,84.56,37.65a12.64,12.64,0,0,0,10.28,0l84.56-37.65,84.56,37.65A12.63,12.63,0,0,0,446.81,494ZM122,158.45C122.43,86,181.69,26.28,254.1,25.28A134.05,134.05,0,0,1,375.53,219.91L266.85,402.05a12.63,12.63,0,0,1-21.7,0L136.47,219.91A132.51,132.51,0,0,1,122,158.45ZM350.83,447.89a12.64,12.64,0,0,0-10.28,0L256,485.54l-84.56-37.65a12.64,12.64,0,0,0-10.28,0L102.59,474l50.94-107.75,32.26-14.36L223.45,415a37.9,37.9,0,0,0,65.09,0l37.67-63.13,32.26,14.36L409.41,474Z" transform="translate(-63.97 0)"/><path d="M313.66,159.27A57.66,57.66,0,1,0,256,216.92,57.72,57.72,0,0,0,313.66,159.27Zm-90.05,0A32.39,32.39,0,1,1,256,191.66,32.43,32.43,0,0,1,223.61,159.27Z" transform="translate(-63.97 0)"/></svg>
                   </div>
-                  <div class="location-address">{{ .Site.Params.workshop.venue }}<br> <i>{{ .Site.Params.workshop.venueinfo }}</i></div>
+                  <div class="location-address">{{ .Site.Params.workshop.venue }}{{ with .Site.Params.workshop.venueinfo }}<br><i>{{ . }}</i>{{ end }}</div>
                 </div>
                 {{ with .Site.Params.workshop.mapiframeurl }}
                 <div class="location-map">
