--- a/themes/hugo-creative-theme/layouts/partials/js.html
+++ b/themes/hugo-creative-theme/layouts/partials/js.html
@@ -8,3 +8,6 @@
 <script src="{{ .Site.BaseURL }}js/wow.min.js"></script>
 {{ "<!-- Custom Theme JavaScript -->" | safeHTML }}
 <script src="{{ .Site.BaseURL }}js/creative.js"></script>
+
+</body>
+</html>
