--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -26,7 +26,7 @@
                         <a href="/workshop">{{ .Site.Params.navigation.links.workshop }}</a>
                     </li>
                 {{ if and .Site.Params.conference .Site.Params.navigation.links.talks }}
-                    <li><a href="/talks">Talks</a></li>
+                    <li><a href="/schedule">Schedule</a></li>
                 {{ end }}
 
                 {{ if and .Site.Params.speakers .Site.Params.navigation.links.speakers }}
