--- a/themes/hugo-creative-theme/layouts/partials/partners.html
+++ b/themes/hugo-creative-theme/layouts/partials/partners.html
@@ -14,7 +14,7 @@
                 <div class="platinum-sponsor-logos-row sponsor-row">
                     <div class="text-center">
                         <img class="img-responsive platinum-sponsor-logos" src="../../img/gojek_logo.png" />
-                    </div>                    
+                    </div>
                 </div>
                 <div class="gold-sponsor-logos-row sponsor-row">
                     <div class="text-center">
@@ -25,7 +25,7 @@
                     </div>
                     <div class="text-center">
                         <img class="img-responsive venue-sponsor-logos" src="../../img/standard_chartered_logo.png" />
-                    </div>                    
+                    </div>
                 </div>
                 <div class="silver-sponsor-logos-row sponsor-row">
                     <div class="img-svg">
@@ -33,6 +33,9 @@
                     </div>
                     <div class="text-center">
                         <img class="img-responsive silver-sponsor-logos" src="../../img/carousell_logo.png" />
+                    </div>
+                    <div class="text-center">
+                        <img class="img-responsive silver-sponsor-logos" src="../../img/imda_logo@2x.png" />
                     </div>
                 </div>
                 <div class="venue-sponsor-logos-row sponsor-row">
