--- a/themes/hugo-creative-theme/layouts/partials/partners.html
+++ b/themes/hugo-creative-theme/layouts/partials/partners.html
@@ -40,6 +40,9 @@
                     <div class="text-center">
                         <img class="img-responsive silver-sponsor-logos datadog" src="../../img/datadog_logo.png" />
                     </div>
+                    <div class="text-center">
+                        <img class="img-responsive silver-sponsor-logos" src="../../img/grab_logo.png" />
+                    </div>
                 </div>
                 <div class="venue-sponsor-logos-row sponsor-row">
                     <div class="text-center">
