--- a/themes/hugo-creative-theme/layouts/partials/partners.html
+++ b/themes/hugo-creative-theme/layouts/partials/partners.html
@@ -48,6 +48,9 @@
                     <div class="text-center">
                         <img class="img-responsive venue-sponsor-logos" src="../../img/google_logo.png" />
                     </div>
+                    <div class="text-center">
+                        <img class="img-responsive venue-sponsor-logos" src="../../img/aws_logo.svg" />
+                    </div>
                 </div>
             </div>
             <div class="col-lg-12 sponsor-invite-text text-center">
