--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -6,7 +6,7 @@
             <div class="cover-img">
               <img class="img-responsive" src="../../img/gopherconsg.svg" alt="GopherCon Singapore" width="450" height="450">
             </div>
-            <h2 class="cover-subtitle">25 May 2017, <a href="/workshop">Amara Singapore Hotel</a>
+            <h2 class="cover-subtitle">25th May 2017, <a href="/workshop">Amara Singapore Hotel</a>
             </h2>
             <h2 class="cover-subtitle">26th May 2017, <a
              href="/venue">Google Asia Pacific HQ, Singapore</a></h2>
