--- a/themes/hugo-creative-theme/layouts/venue/single.html
+++ b/themes/hugo-creative-theme/layouts/venue/single.html
@@ -8,10 +8,56 @@
       <hr>
         <div>
           <p>{{ .Content }}</p>
-        </div>        
+          <p>
+            <strong>Google’s Asia Pacific Headquarters</strong><br>
+            Mapletree Business City<br>
+            70 Pasir Panjang Rd, Singapore 11737
+          </p> 
+        </div>
         <div class="gm-map">
-         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.828221386075!2d103.79676551370686!3d1.2764662990689866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da1911f12998e9%3A0x43e454b88753032a!2sGoogle+Asia+Pacific!5e0!3m2!1sen!2ssg!4v1486358184449" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>       
-      </div> 
+         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.828221386075!2d103.79676551370686!3d1.2764662990689866!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da1911f12998e9%3A0x43e454b88753032a!2sGoogle+Asia+Pacific!5e0!3m2!1sen!2ssg!4v1486358184449" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+    </article>
+  </div>
+  <div class="row">
+    <article class="container-fluid article">
+      <h2 class="article-title">How to get there</h2>
+      <hr>
+      <div class="col-lg-6 col-md-6 col-xs-12">
+      <h3>Train</h3>
+      <p>
+        The nearest MRT station is <a href="http://www.smrt.com.sg/Trains/NetworkMap/LabradorPark" target="_blank">Labrador Park Station</a> Circle Line (yellow colored line) and then walk towards the link bridge through Alexandra Retail Center (ARC) to find block number 70.
+      </p>
+      <h3>Bus</h3>
+      <p>
+        The following bus services are stopping at Pasir Panjang Road : 10, 30, 30e, 51, 143, 175, 176, 188, 188e
+      </p>
+      <ul>
+        <li>15141 Labrador Park Stn</li>
+        <li>15159 Mapletree Business City</li>
+        <li>15149 Labrador Pk Stn/PSA Bldg</li>
+      </ul>
+      <p>
+        The following bus services are stopping at Alexandra Road : 51, 57, 61, 93, 97, 97e, 100, 120, 166, 175, 408, 963, 963E, 963R
+      </p>
+      <ul>
+        <li>14189 Aft Alexandra Rd</li>
+        <li>15041 Aft PSA Bldg</li>
+      </ul>
+      </div>
+      <div class="col-lg-6 col-md-6 col-xs-12">
+      <h3>Car</h3>
+      <p>
+        The main entrance to Mapletree Business City (MBC) is situated along Pasir Panjang Road. You can take major expressways such as the Ayer Rajah Expressway (AYE) and the Central Expressway (CTE)
+      </p>
+      <h3>Useful Apps</h3>
+      <p>Use local apps that can help you get to the venue:</p>
+      <ul>
+        <li>Google Maps</li>
+        <li>MyTransport ( <a href="https://itunes.apple.com/sg/app/mytransport-singapore/id480951210?mt=8" target="_blank">Apple AppStore</a> | <a href="https://play.google.com/store/apps/details?id=sg.gov.lta.mytransport&hl=en" target="_blank">Android Play Store</a> )</li>
+        <li>Grab ( <a href="https://itunes.apple.com/sg/app/grab-car-taxi-bike-booking-app/id647268330?mt=8" target="_blank">Apple AppStore</a> | <a href="https://play.google.com/store/apps/details?id=com.grabtaxi.passenger&hl=en" target="_blank">Android Play Store</a> )</li>
+      </ul>
+      </div>
     </article>
   </div>
 </div>
