--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -686,6 +686,10 @@ header .header-content .header-content-inner p {
     color: rgba(255,255,255,.7);
 }
 
+.team-names {
+  margin-top: 2em;
+}
+
 @media(min-width:768px) {
     header {
         min-height: 100%;
