--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -40,6 +40,9 @@
                     <li>
                         <a href="/team">{{ .Site.Params.navigation.links.team }}</a>
                     </li>
+                    <li>
+                        <a href="/codeofconduct">{{ .Site.Params.navigation.links.conduct }}</a>
+                    </li>
                 <li>
                     <a href="http://www.ticketbase.com/events/gopherconsg2017" class="tickets-btn">Tickets</a>
                 </li>
