wip thank you page

--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -3,19 +3,18 @@
     <div class="header-content">
         <div class="header-content-inner">
             <h3 class="cover-title">The first and largest Go conference in Southeast Asia!</h3>
+            <div>Thank you!</div>
             <div class="cover-img">
-              <img class="img-responsive" src="../../img/gopherconsg.svg" alt="GopherCon Singapore" width="450" height="450">
+              <img class="img-responsive" src="../../img/gopherconsg.svg" alt="GopherCon Singapore" width="300" height="300">
             </div>
-            <h2 class="cover-subtitle">25th May 2017, <a href="/workshop">Amara Singapore Hotel</a>
-            </h2>
-            <h2 class="cover-subtitle">26th May 2017, <a
-             href="/venue">Google Asia Pacific HQ, Singapore</a></h2>
+            <h4 class="cover-subtitle">25th May 2017, <a href="/workshop">Amara Singapore Hotel</a>
+            </h4>
+            <h4 class="cover-subtitle">26th May 2017, <a
+             href="/venue">Google Asia Pacific HQ, Singapore</a></h4>
             {{ if and .Site.Params.hero.slogan .Site.Params.hero.subtitle }}
                 <hr>
             {{ end }}
-            <div class="banner">
-             <span class="content">Thank you! Tickets are SOLD OUT! 👏</span>
-            </div>
+            <a href="https://www.youtube.com/watch?v=vvu0df82SJI&list=PLq2Nv-Sh8EbZEjZdPLaQt1qh_ohZFMDj8" class="btn btn-primary btn-xl hero-btn">check out the videos</a>
         </div>
     </div>
 </header>
