slight adjustment to design

--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -2,8 +2,8 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h3 class="cover-title">The first and largest Go conference in Southeast Asia!</h3>
-            <div>Thank you!</div>
+            <h4 class="cover-title">The first and largest Go conference in Southeast Asia!</h4>
+            <h2 class="cover-title">Thank you!</h2>
             <div class="cover-img">
               <img class="img-responsive" src="../../img/gopherconsg.svg" alt="GopherCon Singapore" width="300" height="300">
             </div>
