--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -603,10 +603,10 @@ h4.timeline-sub-block-header {
 .cover-img {
     width: 100%;
     display: block;
-    margin: 50px auto;
+    margin: 40px auto;
 }
 
-.cover-img .img-responsive{
+.cover-img .img-responsive {
   margin: 0 auto;
 }
 
@@ -617,6 +617,10 @@ h4.timeline-sub-block-header {
 .cover-subtitle {
   line-height: 1em;
   margin-bottom: 0.8em;
+}
+
+h2.cover-title {
+  margin-top: 20px;
 }
 
 @media(max-width: 700px) {
